<resources>
    <string name="app_name">InventoryApp</string>
    <string name="table_name">Books</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="suppier_phone_number">Suppier Phone Number</string>
    <string name="quantity">Quantity</string>
    <string name="book_price">Book Price</string>
    <string name="book_name">Book Name</string>
    <string name="button">Enter</string>
</resources>
