<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/bookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/book_name" />

    <EditText
        android:id="@+id/bookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/book_price" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity" />

    <EditText
        android:id="@+id/supplierName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_name" />

    <EditText
        android:id="@+id/supplierPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/suppier_phone_number" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <TextView
        android:id="@+id/displayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>